--- a/springbank/src/main/resources/application.properties
+++ b/springbank/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8085
 
 # data source
-spring.datasource.url=jdbc:mysql://localhost:3306/springbank_teste?useTimeZone=true&serverTimezone=America/Sao_Paulo
+spring.datasource.url=jdbc:mysql://localhost:3306/springbank_dev?useTimeZone=true&serverTimezone=America/Sao_Paulo
 spring.datasource.username=root
 spring.datasource.password=3885
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -12,5 +12,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 # jwt
 springbank.jwt.secret=rm'!@N=Ke!~p8VTA2ZRK~nMDQX5Uvm!m'D&]{@Vr?G;2?XhbC:Qa#9#eMLN\}x3?JR3.2zr~v)gYF^8\:8>:XfB:Ww75N/emt9Yj[bQMNCWwW\J?N,nvH.<2\.r~w]*e~vgak)X"v8H`MH/7"2E`,^k@n<vE-wD3g9JWPy;CrY*.Kd2_D])=><D?YhBaSua5hW%{2]_FVXzb9`8FH^b[X3jzVER&:jw2<=c38=>L/zBq`}C6tT*cCSVC^c]-L}&/
-#springbank.jwt.expiration=86400000
-springbank.jwt.expiration=1800000
+springbank.jwt.expiration=300000
